STATIC: Footer is now fixed instead of absolute to avoid being stuck within long text

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,6 +7,7 @@ body {
     background: $color-bg;
     background: linear-gradient($color-bg, $color-dark);
     padding-top: 90px;
+    padding-bottom:150px;
 }
 
 .wrapper {
